--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -392,12 +392,6 @@ PAGINA ATTIVITA
 =========================
 */
 
-#noscriptAttivita{
-	font-size: 24px;
-	color:white;
-	text-align: center;
-}
-
 #Presentazione{
 	color: #DAAC5E;
 	width:95%;
@@ -411,7 +405,7 @@ PAGINA ATTIVITA
     
 }
 
-#Presentazione p{
+#Presentazione p {
 	color:white;
 }
 
@@ -419,69 +413,45 @@ PAGINA ATTIVITA
 	font-size: 50px;
 }
 
-#powerpump {
-	margin: 4% 2%;
-	width:96%;
- 
+#powerpump, #spinning, #fitboxe, #jumpfit, #step {
+	margin: 5% 15%;
     overflow: hidden;
- 
 }
-#spinning {
-	margin: 4% 2%;
-	width:96%;
- 
-    overflow: hidden;
- 
-}
-#fitboxe {
-	margin: 4% 2%;
-	width:96%;
- 
-    overflow: hidden;
- 
-}
-#jumpfit {
-	margin: 4% 2%;
-	width:96%;
- 
-    overflow: hidden;
- 
-}
-#step {
-	margin: 4% 2%;
-	width:96%;
- 
-    overflow: hidden;
- 
-}
+
 .textAttContainer {
-	margin:0 1% 1% 1%;
+	margin:1%;
 	float:left;
 	width:46%;
 }
-.testoAtt {
-	
+
+.testoAtt {	
 	width:100%;
 	color:white;
 }
-.courseimg{
-	float:left;
-	width: 50%;
-	height: 400px;
-	object-fit: cover;
 
+.courseimg {
+	float:left;
+	margin-right: 2%;
+	width: 50%;
+	height: 380px;
+	border-radius: 50px;
+	object-fit: cover;
 }
+
 .titleCourseContent {
 	width:100%;
 	float:left;
+	margin-left:10%;
 	margin-bottom: 2%;
 }
+
 .titleAttPower {
   color: rgb(0,100,180);
   font-size: 22pt;
   font-weight: bold;
   margin-top:3%;
 }
+
 .titleAttSpinning {
   color:rgb(30,128,23);
   float:left;
@@ -489,6 +459,7 @@ PAGINA ATTIVITA
   font-weight: bold;
   margin-top:3%;
 }
+
 .titleAttFitBoxe {
   color: rgb(220,120,0);
   float:left;
@@ -496,6 +467,7 @@ PAGINA ATTIVITA
   font-weight: bold;
   margin-top:3%;
 }
+
 .titleAttJumpFit {
   color:rgb(200,50,0);
   float:left;
@@ -503,6 +475,7 @@ PAGINA ATTIVITA
   font-weight: bold;
   margin-top:3%;
 }
+
 .titleAttStep {
   color: rgb(161,22,101);
   float:left;
@@ -510,12 +483,13 @@ PAGINA ATTIVITA
   font-weight: bold;
   margin-top:3%;
 }
+
 .iconAtt {
 	float:left;
 	width:10%;
-	margin-left:25%;
-	
+	margin-left:25%;	
 }
+
 /* NON UTILIZZATE, PARTE MOBILE?
 .accordion {
 	background-position: right;
