--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -416,6 +416,7 @@ PAGINA ATTIVITA
 #powerpump, #spinning, #fitboxe, #jumpfit, #step {
 	margin: 5% 15%;
     overflow: hidden;
+	text-align: justify;
 }
 
 .textAttContainer {
@@ -742,13 +743,12 @@ SEZIONE CALENDARIO
 }
 
 /*
-====================
-PAGINA DINAMICA NEWS
-====================
+============
+PAGINA NEWS
+============
 */
 
 .newscont {
-	border:2px solid white;
 	float:left;
 	width:60%;
 	margin:3% 20%;
@@ -758,20 +758,20 @@ PAGINA DINAMICA NEWS
 	text-align:center;
 	margin:2%;
 	margin-bottom:0%;
-	color:white;
+	color:#DAAC5E;
+	font-size: 30px;
 }
 
 .pubblicazione {
 	float:right;
-	margin:0.5em;
-
+	margin:0 1%;
 	color:white;
-	font-size: 12px;
+	font-size: 15px;
 }
 
 .imgnews {
 	float:left;
-	margin:0.5%;
+	margin:2% 0;
 	width:99%;
 	overflow: hidden;
 	height:24em;
@@ -783,13 +783,12 @@ PAGINA DINAMICA NEWS
 	width:100%;
 }
 
-.textnews{
+.textnews {
 	float:left;
-	margin:0% 1%;
-	text-align: left;
+	margin:0;
+	text-align: justify;
 	width:100%;
 	color:white;
-	font-family:Helvetica;
 }
 
 /*=================
