--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -251,12 +251,14 @@ PAGINA HOME
 .ridimensionasx {
 	float:left;
 	width:50%;
+	height: 400px;
 	object-fit: cover;
 }
 
 .ridimensionadx {
 	float:right;
 	width:50%;
+	height: 400px;
 	object-fit: cover;
 }
 
@@ -279,13 +281,6 @@ PAGINA HOME
 	text-align: justify;
 }
 
-.allenamento {
-	float:left;
-	width:50%;
-	height:25em;
-	object-fit: cover;
-
-}
 .dx {
 	text-align:left;
 	float:right;
@@ -445,8 +440,27 @@ PAGINA ATTIVITA
 .titleCourseContent {
 	width:100%;
 	float:left;
-	margin-left:10%;
 	margin-bottom: 2%;
+}
+
+#PowerpumpCourseContent {
+	margin-left: 6%;
+}
+
+#SpinningCourseContent {
+	margin-left: 10%;
+}
+
+#FitboxeCourseContent {
+	margin-left: 12%;
+}
+
+#JumpfitCourseContent {
+	margin-left: 10%;
+}
+
+#StepCourseContent {
+	margin-left: 15%;
 }
 
 .titleAttPower {
@@ -620,55 +634,55 @@ SEZIONE CALENDARIO
 	position: relative;
 
 }
-#salafitness
-{
+#salafitness {
 	font-size:140%;
 	clear:both;
 	margin-left:1.5em;
 }
-.giornovoce
-{
+
+.giornovoce {
 	font-size:140%;
 }
-.vocecalendario
-{
+
+.vocecalendario {
 	float:left;
 	margin:0;
 	width: 16.6%;
 }
-.orari
-{
-	
+
+.orari {
 	list-style-type: none;
 	font-size: 110%;
 	margin:0;
 	padding:0;
 }
+
 .orari li {
 	margin:1.3em 0em 3.6em 0em;
 }
-.oraricorsi {
 
+.oraricorsi {
 	list-style-type: none;
 	font-size: 110%;
 	margin:0;
 	padding:0;
-
 }
-.oraricorsi li a{
+
+.oraricorsi li a {
 	width:100%;
 	height:4em;
 }
-.oraricorsi li
-{
+
+.oraricorsi li {
 	margin:0;
 }
-.corsovuoto
-{
+
+.corsovuoto {
 	border:1px solid white;
 	width:auto;
 	height:4em;
 }
+
 .spinning {
 	border:1px solid white;
 	width:auto;
@@ -677,11 +691,12 @@ SEZIONE CALENDARIO
 	text-align: center;
 	opacity: 0.8;
 }
-.spinning:hover{
+
+.spinning:hover {
 	background-color: rgb(0,230,0);
 	opacity: 0.7;
-
 }
+
 .step {
 	background-color: rgb(161,22,101);
 	border:1px solid white;
@@ -690,10 +705,12 @@ SEZIONE CALENDARIO
 	text-align: center;
 	opacity: 0.8;
 }
+
 .step:hover {
 	background-color: rgb(120,0,40);
 	opacity: 0.8;
 }
+
 .powerpump {
 	background-color:  rgb(0,100,180);
 	border:1px solid white;
@@ -739,6 +756,7 @@ SEZIONE CALENDARIO
 .corsovoce {
 	margin-top:1.2em;
 }
+
 #imgcal {
 	width:96%;
 	height:44em;
@@ -872,6 +890,10 @@ PAGINA GALLERIA
 	text-decoration: underline;
 	margin-right: 5%;
 	text-align: right;
+}
+
+#back:hover {
+	color:#DAAC5E;
 }
 
 #gallerypicbloc {
