--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -913,6 +913,7 @@ a {
 	width:100%;
 	color:#e3e3e3;
 	display:block;
+	outline: none;
 }
 
 .login-form .group .input,
@@ -921,6 +922,7 @@ a {
 	padding:15px 20px;
 	border-radius:25px;
 	background:rgba(255,255,255,.1);
+	outline: none;
 }
 
 .login-form .group .label {
