--- a/CSS/Print.css
+++ b/CSS/Print.css
@@ -6,7 +6,7 @@ html, body {
 	font-size: 12pt;
 	max-width: 1024px;
 	margin: auto;
-	font-family: Times New Roman, Times, serif;
+	font-family: "Times New Roman", Times, serif;
 	text-align: justify;
 	position: relative;
 	width: 100%;
